--- a/src/PassSharp/PassSharp.csproj
+++ b/src/PassSharp/PassSharp.csproj
@@ -2,14 +2,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.0.0</Version>
+    <Version>2.0.0.0</Version>
     <Company>Daxko</Company>
     <Authors>jwilson</Authors>
-    <Description>An Apple Wallet Passbook Library for NetCore projects.</Description>
+    <Description>An Apple Wallet Passbook Library for .NET projects.</Description>
     <Copyright>jwilson</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
-    <PackageReference Include="ServiceStack.Text" Version="5.6.0" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.6.7" />
+    <PackageReference Include="ServiceStack.Text" Version="5.9.0" />
   </ItemGroup>
 </Project>
